--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>Arongil</title>
   </head>
   <body>
-    <p style="font-size: 1.4em; text-align: center;"><a href="/programs-collection">Programs Collection</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/calculator">Calculator</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/bird-breaker">Bird Breaker</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/void">Void</a></p>
+    <div id="links" class="center">
+      <p class="medium">Programs Collection</a></p>
+      <p class="small"><a href="/calculator">Calculator</a></p>
+      <p class="small"><a href="/bird-breaker">Bird Breaker</a></p>
+      <p class="small"><a href="/void">Void</a></p>
+    </div>
   </body>
 </html>
