--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="links" class="center">
-      <p class="medium">Programs Collection</a></p>
+      <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
       <p class="small"><a href="/calculator">Calculator</a></p>
       <p class="small"><a href="/bird-breaker">Bird Breaker</a></p>
       <p class="small"><a href="/void">Void</a></p>
