--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Arongil</title>
+    
+    <link href="base-styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="links" class="center">
