--- a/bird-breaker/index.html
+++ b/bird-breaker/index.html
@@ -11,7 +11,7 @@
     <canvas id="canvas"></canvas>
     <div id="game-description" class="center white arial">
       <p class="small">
-        Fly your plane to victory by breaking birds with the ball! Use the left and right arrow keys to steer, and when the ball comes down, hit it back up with your wings or propellor. Be warned, the birds have a nasty temper!
+        Fly your plane to victory by breaking birds with the ball! Use the left and right arrow keys to steer, and when the ball comes down, hit it back up with your wings or propeller. Be warned, the birds have a nasty temper!
       </p>
     </div>
     <script>
