--- a/bird-breaker/index.html
+++ b/bird-breaker/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bird Breaker</title>
     
-    <link href="/base_styles.css" rel="stylesheet" type="text/css" />
+    <link href="/base-styles.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="bird-breaker.js"></script>
   </head>
