--- a/hangman/index.html
+++ b/hangman/index.html
@@ -11,5 +11,6 @@
     <script src="hangman.js"></script>
     
     <p>How many letters?</p><input id="word-length"></input>
+    <button onclick="">What's the next letter?</button>
   </body>
 </html>
