--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -4,6 +4,7 @@
     <title>Minesweeper</title>
     
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="/base-styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <canvas id="canvas" style="padding: 4%; margin: auto;" oncontextmenu="return false;"></canvas>
