--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -91,8 +91,7 @@
             // easyLogic did nothing, so try a contradiction search.
             contradictionSearch = minefield.contradictionSearch();
             if (contradictionSearch == "?") {
-              // The board is ambiguous, impossible to solve.
-              return "?";
+              break;
             }
           }
         }
