--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="links" class="center">
       <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
       <p class="small"><a href="/calculator">Calculator</a></p>
+      <p class="small"><a href="/gravity-pong">Gravity Pong</a></p>
       <p class="small"><a href="/minesweeper">Minesweeper</a></p>
       <p class="small"><a href="/bird-breaker">Bird Breaker</a></p>
       <p class="small"><a href="/void">Void</a></p>
