--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -15,9 +15,9 @@
     </div>
     
     <script src="gravity-pong.js"></script>
-    
     <script>
       init();
     </script>
+    <button onclick="GC.paddles[0].AI = !GC.paddles[0].AI;">Toggle AI on Left Paddle</button>
   </body>
 </html>
