--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -28,6 +28,7 @@
         var gameInfoDisplay = document.getElementById("game-information");
         gameInfoDisplay.innerHTML = "Left Paddle's AI is " + (GC.paddles[0].AI ? ("on with the AI Level of " + GC.paddles[0].AILevel) : "off") + ".<br>Right Paddle's AI is " + (GC.paddles[1].AI ? ("on with the AI Level of " + GC.paddles[1].AILevel) : "off") + ".";
       }
+      updateGameInfoDisplay();
     </script>
   </body>
 </html>
