--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -29,6 +29,9 @@
         gameInfoDisplay.innerHTML = "Left Paddle's AI is " + (GC.paddles[0].AI ? ("on with the AI Level of " + GC.paddles[0].AILevel) : "off") + ".<br>Right Paddle's AI is " + (GC.paddles[1].AI ? ("on with the AI Level of " + GC.paddles[1].AILevel) : "off") + ".";
       }
       updateGameInfoDisplay();
+      var gameControls = document.getElementById("game-controls");
+      gameControls.style.left = WIDTH / 10;
+      gameControls.style.top = HEIGHT / 3;
     </script>
   </body>
 </html>
