--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -32,8 +32,8 @@
       }
       updateGameInfoDisplay();
       var gameControls = document.getElementById("game-controls");
-      gameControls.style.left = WIDTH / 8;
-      gameControls.style.top = HEIGHT / 3;
+      gameControls.style.left = WIDTH / 8 + "px";
+      gameControls.style.top = HEIGHT / 3 + "px";
     </script>
   </body>
 </html>
