--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -32,8 +32,10 @@
       }
       updateGameInfoDisplay();
       var gameControls = document.getElementById("game-controls");
+      gameControls.style.position = "absolute";
       gameControls.style.left = WIDTH / 32 + "px";
       gameControls.style.top = HEIGHT / 4 + "px";
+      gameControls.style.width = "20%";
     </script>
   </body>
 </html>
