--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="game-controls" class="center white arial">
+    <div id="game-controls" class="center white xsmall arial">
       <button onclick="GC.paddles[0].AI = !GC.paddles[0].AI; updateGameInfoDisplay();">Toggle AI of Left Paddle</button> <br>
       <button onclick="GC.paddles[0].AILevel++; if (GC.paddles[0].AILevel > 5) GC.paddles[0].AILevel = 1; updateGameInfoDisplay();">Increment AI level of Left Paddle</button> <br>
       <button onclick="GC.paddles[1].AILevel++; if (GC.paddles[1].AILevel > 5) GC.paddles[1].AILevel = 1; updateGameInfoDisplay();">Increment AI level of Right Paddle</button> <br>
@@ -35,7 +35,7 @@
       gameControls.style.position = "absolute";
       gameControls.style.left = WIDTH / 32 + "px";
       gameControls.style.top = HEIGHT / 4 + "px";
-      gameControls.style.width = "25%";
+      gameControls.style.width = "30%";
     </script>
   </body>
 </html>
