--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="game-controls" class="center white arial">
-      <button onclick="GC.paddles[0].AI = !GC.paddles[0].AI; updateGameInfoDisplay();" style="padding: auto;">Toggle AI of Left Paddle</button> <br>
-      <button onclick="GC.paddles[0].AILevel++; if (GC.paddles[0].AILevel > 5) GC.paddles[0].AILevel = 1; updateGameInfoDisplay();" style="padding: auto;">Increment AI level of Left Paddle</button> <br>
-      <button onclick="GC.paddles[1].AILevel++; if (GC.paddles[1].AILevel > 5) GC.paddles[1].AILevel = 1; updateGameInfoDisplay();" style="padding: auto;">Increment AI level of Right Paddle</button> <br>
+      <button onclick="GC.paddles[0].AI = !GC.paddles[0].AI; updateGameInfoDisplay();" style="width: max-content;">Toggle AI of Left Paddle</button> <br>
+      <button onclick="GC.paddles[0].AILevel++; if (GC.paddles[0].AILevel > 5) GC.paddles[0].AILevel = 1; updateGameInfoDisplay();" style="width: max-content;">Increment AI level of Left Paddle</button> <br>
+      <button onclick="GC.paddles[1].AILevel++; if (GC.paddles[1].AILevel > 5) GC.paddles[1].AILevel = 1; updateGameInfoDisplay();" style="width: max-content;">Increment AI level of Right Paddle</button> <br>
       <p id="game-information"></p>
     </div>
     
