--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -31,13 +31,13 @@
         gameInfoDisplay.innerHTML = "Left Paddle's AI is " + (GC.paddles[0].AI ? ("on with the AI Level of " + GC.paddles[0].AILevel) : "off") + ".<br>Right Paddle's AI is " + (GC.paddles[1].AI ? ("on with the AI Level of " + GC.paddles[1].AILevel) : "off") + ".";
       }
       updateGameInfoDisplay();
-      var gameControls = document.getElementById("game-controls");
-      gameControls.style.position = "absolute";
-      gameControls.style.left = WIDTH / 28 + "px";
-      gameControls.style.top = HEIGHT / 4 + "px";
-      gameControls.style.width = "22%";
-      gameControls.style.padding = WIDTH / 400 + "px";
-      gameControls.style.fontSize = "80%";
+//       var gameControls = document.getElementById("game-controls");
+//       gameControls.style.position = "absolute";
+//       gameControls.style.left = WIDTH / 28 + "px";
+//       gameControls.style.top = HEIGHT / 4 + "px";
+//       gameControls.style.width = "22%";
+//       gameControls.style.padding = WIDTH / 400 + "px";
+//       gameControls.style.fontSize = "80%";
     </script>
   </body>
 </html>
