--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -31,6 +31,7 @@
         gameInfoDisplay.innerHTML = "Left Paddle's AI is " + (GC.paddles[0].AI ? ("on with the AI Level of " + GC.paddles[0].AILevel) : "off") + ".<br>Right Paddle's AI is " + (GC.paddles[1].AI ? ("on with the AI Level of " + GC.paddles[1].AILevel) : "off") + ".";
       }
       updateGameInfoDisplay();
+      var gameControls = document.getElementById("game-controls");
       gameControls.style.width = "40%";
       gameControls.style.padding = WIDTH / 400 + "px";
     </script>
