--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -32,8 +32,9 @@
       }
       updateGameInfoDisplay();
       var gameControls = document.getElementById("game-controls");
-      gameControls.style.width = "40%";
+      gameControls.style.width = "30%";
       gameControls.style.padding = WIDTH / 400 + "px";
+      gameControls.style.marginBottom = HEIGHT / 20 + "px";
     </script>
   </body>
 </html>
