--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -18,7 +18,7 @@
     
     <div id="game-description" class="center white arial">
       <p class="small">
-        Play pong with gravity and 4 levels of AI to choose from, one as the worst, four as the best! (AI level 5 is just for show.)<br>Left arrow key for up, right arrow key for down.
+        Play pong with gravity and 4 levels of AI to choose from, one as the worst, four as the best! (AI level 5 is just for show.) Left arrow key for up, right arrow key for down.
       </p>
     </div>
     
