--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -32,7 +32,7 @@
       }
       updateGameInfoDisplay();
       var gameControls = document.getElementById("game-controls");
-      gameControls.style.width = WIDTH * 0.8;
+      gameControls.style.width = WIDTH * 0.8 + "px";
       gameControls.style.padding = WIDTH / 400 + "px";
       gameControls.style.marginBottom = HEIGHT / 50 + "px";
     </script>
