--- a/gravity-pong/index.html
+++ b/gravity-pong/index.html
@@ -32,8 +32,8 @@
       updateGameInfoDisplay();
       var gameControls = document.getElementById("game-controls");
       gameControls.style.width = WIDTH * 0.8 + "px";
-      gameControls.style.padding = WIDTH / 200 + "px";
-      gameControls.style.marginTop = WIDTH / 200 + "px";
+      gameControls.style.paddingTop = WIDTH / 100 + "px";
+      gameControls.style.marginTop = HEIGHT / 50 + "px";
       gameControls.style.marginBottom = HEIGHT / 50 + "px";
     </script>
   </body>
