--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id="links" class="center">
       <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
+      <p class="small"><a href="https://arongil.github.io/disease">Disease Simulation</a></p>
       <p class="small"><a href="/calculator">Calculator</a></p>
       <p class="small"><a href="/gravity-pong">Gravity Pong</a></p>
       <p class="small"><a href="/minesweeper">Minesweeper</a></p>
