--- a/statistics/box-and-whisker/index.html
+++ b/statistics/box-and-whisker/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-</head>
-
-<body>
-  <canvas id="canvas"></canvas>
-  <textarea id="data" placeholder='Enter your data here. For example, put "1,2,3,4,5" .' cols="30"></textarea>
-  <p id="FiveNumberSummary"><span style="font-size: 1.4em;">5 Number Summary of Given Data:</span><br>
-    Q0: <span id="Q0"></span><br>
-    Q1: <span id="Q1"></span><br>
-    Q2: <span id="Q2"></span><br>
-    Q3: <span id="Q3"></span><br>
-    Q4: <span id="Q4"></span><br>
-  </p>
-</body>
-
+  <head>
+    <title>Box and Whiskers Plotter</title>
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/manifest.json">
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+    
+    <link href="/base-styles.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <textarea id="data" placeholder='Enter your data here. For example, put "1,2,3,4,5" .' cols="30"></textarea>
+    <p id="FiveNumberSummary"><span style="font-size: 1.4em;">5 Number Summary of Given Data:</span><br>
+      Q0: <span id="Q0"></span><br>
+      Q1: <span id="Q1"></span><br>
+      Q2: <span id="Q2"></span><br>
+      Q3: <span id="Q3"></span><br>
+      Q4: <span id="Q4"></span><br>
+    </p>
+  </body>
 </html>
