--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <p class="small"><a href="/minesweeper">Minesweeper</a></p>
       <p class="small"><a href="/bird-breaker">Bird Breaker</a></p>
       <p class="small"><a href="/void">Void</a></p>
+      <p class="small"><a href="/statistics">Statistics (Box and Whiskers)</a></p>
     </div>
   </body>
 </html>
