--- a/statistics/box-and-whisker/index.html
+++ b/statistics/box-and-whisker/index.html
@@ -22,5 +22,7 @@
       Q3: <span id="Q3"></span><br>
       Q4: <span id="Q4"></span><br>
     </p>
+    
+    <script src="box-and-whiskers.js"></script>
   </body>
 </html>
