--- a/bytegain/index.html
+++ b/bytegain/index.html
@@ -24,7 +24,7 @@
   </select>
   <button id="dashboard-load" onclick="loadDashboard();">Load Selection</button>
   
-  <div class="center medium"></div>
+  <div class="center medium"><iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1p7OK1aeIOnXjXbawRYcQXL4tIKPYywdE/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe></div>
   
   <script>
     function loadDashboard() {
