--- a/bytegain/index.html
+++ b/bytegain/index.html
@@ -15,12 +15,12 @@
   <body>
   
   <select id="dashboard-select">
-    <option value="Slimvance"></option>
-    <option value="Tile"></option>
-    <option value="VMware"></option>
-    <option value="Apartment List"></option>
-    <option value="9gag"></option>
-    <option value="ca"></option>
+    <option value="slimvance">Slimvance</option>
+    <option value="tile">Tile</option>
+    <option value="vmware">VMware</option>
+    <option value="apartment-list">Apartment List</option>
+    <option value="9gag">9gag</option>
+    <option value="ca">CA</option>
   </select>
   <button id="dashboard-load" onclick="loadDashboard();">Load Selection</button>
   
