--- a/bytegain/index.html
+++ b/bytegain/index.html
@@ -32,7 +32,7 @@
     var dashboards = {
       "Slimvance": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1p7OK1aeIOnXjXbawRYcQXL4tIKPYywdE/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe>',
       "Tile": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1FccGMhCZj8e9l3sIPQsaEfi2Y2sXCcbC/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe>',
-      "VMware": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1gMU4evQcMhTiYBY6aExFyJcWFjRMCEPV/page/ZFSU" frameborder="0" style="border:0" allowfullscreen></iframe>'.
+      "VMware": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1gMU4evQcMhTiYBY6aExFyJcWFjRMCEPV/page/ZFSU" frameborder="0" style="border:0" allowfullscreen></iframe>',
       "Apartment List": '',
       "9gag": '',
       "CA": ''
