--- a/bytegain/index.html
+++ b/bytegain/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calculator</title>
+    <title>ByteGain Dashboard</title>
     <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -10,7 +10,6 @@
     <meta name="theme-color" content="#ffffff">
     
     <link href="/base-styles.css" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
   
