--- a/bytegain/index.html
+++ b/bytegain/index.html
@@ -41,7 +41,7 @@
       var dashboard = document.getElementById("dashboard-select").value,
           iframe = dashboards[dashboard],
           display = document.getElementById("dashboard-display");
-      display.innerHTML = "<p>" + dashboard + " Dashboard</p><br><br>" + iframe;
+      display.innerHTML = "<p class='arial'>" + dashboard + " Dashboard</p>" + iframe;
     }
   </script>
   
