--- a/bytegain/index.html
+++ b/bytegain/index.html
@@ -20,7 +20,7 @@
       <option value="VMware">VMware</option>
       <option value="Apartment List">Apartment List</option>
       <option value="9gag">9gag</option>
-      <option value="CA">CA</option>
+      <option value="Consumer Affairs">CA</option>
     </select>
     <button id="dashboard-load" onclick="loadDashboard();">Load Selection</button>
   </div>
@@ -32,9 +32,9 @@
       "Slimvance": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1p7OK1aeIOnXjXbawRYcQXL4tIKPYywdE/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe>',
       "Tile": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1FccGMhCZj8e9l3sIPQsaEfi2Y2sXCcbC/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe>',
       "VMware": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1FccGMhCZj8e9l3sIPQsaEfi2Y2sXCcbC/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe></iframe>',
-      "Apartment List": '',
-      "9gag": '',
-      "CA": ''
+      "Apartment List": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1390fSNJllYIuH7spSCSYQYq9EzVc8zYI/page/ZFSU" frameborder="0" style="border:0" allowfullscreen></iframe>',
+      "9gag": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/17o2KH0_SrwN801DeGLE3H1-jk-ZB8LGq/page/ZFSU" frameborder="0" style="border:0" allowfullscreen></iframe>',
+      "Consumer Affairs": '<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/11oDosoFETgMb5WVLaeeKY8pg0pc20Fh2/page/Zc5T" frameborder="0" style="border:0" allowfullscreen></iframe>'
     };
     
     function loadDashboard() {
