--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="links" class="center">
-      <p class="large"><a href="/academy">Arongil Academy</a></p>
+      <p class="big"><a href="/academy">Arongil Academy</a></p>
       <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
       <p class="small"><a href="/disease">Disease Simulation</a></p>
       <p class="small"><a href="/calculator">Calculator</a></p>
