--- a/academy/index.html
+++ b/academy/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link href="/base-styles.css" rel="stylesheet" type="text/css" />
-  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
   
 </head>
 <body>
