--- a/academy/index.html
+++ b/academy/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="gr__s_codepen_io"><head>
+<html lang="en"><head>
 
   <title>Arongil Academy</title>
   <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-touch-icon.png">
