--- a/academy/index.html
+++ b/academy/index.html
@@ -11,6 +11,7 @@
 
   <link href="/base-styles.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="Arongil Logo.png" rel="preload" as="image" type="image/png" />
   
 </head>
 <body>
