--- a/academy/index.html
+++ b/academy/index.html
@@ -39,7 +39,7 @@
   <div id="info" style="font-size: 3vh;">
     <div id="about" class="block" style="background-color: #d8d8d8;">
       <h2 style="text-align: center;" class="block-header">About</h2>
-      <p>Arongil Academy is a free, online library of mathematics. Videos created by Arongil are curated then organized by class and topic.</p>
+      <p>Arongil Academy is a free, online library of mathematics.</p>
     </div>
     <div id="contact" class="block" style="background-color: #d8d8d8;">
       <h2 style="text-align: center;" class="block-header">Contact</h2>
