--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link href="base-styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="links" class="center">
+    <div id="links" class="center" style="font: roboto;">
       <p class="big"><a href="/academy">Arongil Academy</a></p>
+      <p class="big"><a href="/schedule">Schedule</a></p>
       <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
       <p class="small"><a href="/disease">Disease Simulation</a></p>
       <p class="small"><a href="/calculator">Calculator</a></p>
