Corrected font css.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="base-styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="links" class="center" style="font: roboto;">
+    <div id="links" class="center" style="font-family: Helvetica, Verdana, Arial;">
       <p class="big"><a href="/academy">Arongil Academy</a></p>
       <p class="big"><a href="/schedule">Schedule</a></p>
       <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
