--- a/schedule/index.html
+++ b/schedule/index.html
@@ -32,11 +32,11 @@
                     "console" tab to see progress.</strong></li>
             </ol>
             <h4>Viewing the Good Schedule</h4>
+            <p><em>A JSON string will be automatically copied into the text-box
+                below when the search for a schedule is complete. If you wish
+                to view a different schedule, copy its JSON string into the
+                box instead.</em></p>
             <ol style="text-align: initial">
-                <li>A JSON string will be automatically copied into the text-box
-                    below when the search for a schedule is complete. If you wish
-                    to view a different schedule, copy its JSON string into the
-                    box instead.</li>
                 <li><strong>Click the "load JSON" button.</strong> A selection of
                     teachers and specific independence levels will appear.</li>
                 <li><strong>Choose a category to load</strong>, or press
@@ -90,4 +90,4 @@
         <script src="canvas.js"></script>
         <script src="ui.js"></script>
     </body>
-</html>
+<
