--- a/schedule/index.html
+++ b/schedule/index.html
@@ -21,7 +21,7 @@
                 <li><strong>Choose your milestone setting.</strong> Milestones are
                     used to discard unpromising schedules early in the search. The
                     recommended option is the first button with the 10th percentile,
-                    which is more leniant.</li>
+                    which is more lenient.</li>
                 <li><strong>Choose how long the search will run.</strong> You can
                     safely halve the time estimates given in parentheses at the
                     end if you chose to use milestones. A light search might be
