--- a/sound/index.html
+++ b/sound/index.html
@@ -12,6 +12,8 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
+        <script src="p5.min.js"></script>
+        <script src="p5audio.js"></script>
         <script src="shush.js"></script>
         <script src="soundmeter.js"></script>
         <script src="sound.js"></script>
