--- a/sound/index.html
+++ b/sound/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <script src="p5.min.js"></script>
-        <script src="p5audio.js"></script>
+        <script src="p5.sound.js"></script>
         <script src="shush.js"></script>
         <script src="soundmeter.js"></script>
         <script src="sound.js"></script>
