--- a/sound/index.html
+++ b/sound/index.html
@@ -12,10 +12,8 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <script src="p5.min.js"></script>
-        <script src="p5.sound.js"></script>
-        <script src="shush.js"></script>
-        <script src="soundmeter.js"></script>
-        <script src="sound.js"></script>
+        <script src="p5.min.js" type="text/javascript"></script>
+        <script src="p5.sound.js" type="text/javascript"></script>
+        <script src="sketch.js" type="text/javascript"></script>
     </body>
 <html>
