--- a/sound/index.html
+++ b/sound/index.html
@@ -12,13 +12,13 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <source src="audio/shush1.mp3" type="audio/mp3"></source>
-        <source src="audio/shush2.mp3" type="audio/mp3"></source>
-        <source src="audio/shush3.mp3" type="audio/mp3"></source>
-        <source src="audio/shush4.mp3" type="audio/mp3"></source>
+        <source src="/audio/shush1.mp3" type="audio/mp3"></source>
+        <source src="/audio/shush2.mp3" type="audio/mp3"></source>
+        <source src="/audio/shush3.mp3" type="audio/mp3"></source>
+        <source src="/audio/shush4.mp3" type="audio/mp3"></source>
 
-        <script src="p5.min.js" type="text/javascript"></script>
-        <script src="p5.sound.js" type="text/javascript"></script>
-        <script src="sketch.js" type="text/javascript"></script>
+        <script src="/p5.min.js" type="text/javascript"></script>
+        <script src="/p5.sound.js" type="text/javascript"></script>
+        <script src="/sketch.js" type="text/javascript"></script>
     </body>
 <html>
