--- a/sound/index.html
+++ b/sound/index.html
@@ -17,8 +17,8 @@
         <source src="/audio/shush3.mp3" type="audio/mp3"></source>
         <source src="/audio/shush4.mp3" type="audio/mp3"></source>
 
-        <script src="/p5.min.js" type="text/javascript"></script>
-        <script src="/p5.sound.js" type="text/javascript"></script>
-        <script src="/sketch.js" type="text/javascript"></script>
+        <script src="p5.min.js" type="text/javascript"></script>
+        <script src="p5.sound.js" type="text/javascript"></script>
+        <script src="sketch.js" type="text/javascript"></script>
     </body>
 <html>
