--- a/statistics/index.html
+++ b/statistics/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <script>
-window.location.replace("http://www.arongil.com/statistics/box-and-whisker");
+window.location.replace("https://www.arongil.com/statistics/box-and-whisker");
 </script>
 
 </body>
