--- a/sound/index.html
+++ b/sound/index.html
@@ -19,6 +19,8 @@
 
         <script src="p5.min.js" type="text/javascript"></script>
         <script src="p5.sound.js" type="text/javascript"></script>
-        <script src="sketch.js" type="text/javascript"></script>
+        <script src="shusher.js" type="text/javascript"></script>
+        <script src="soundmeter.js" type="text/javascript"></script>
+        <script src="sound.js" type="text/javascript"></script>
     </body>
 <html>
