--- a/sound/index.html
+++ b/sound/index.html
@@ -12,6 +12,8 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
+        <div id="canvases"></div>
+        
         <source src="audio/shush1.mp3" type="audio/mp3"></source>
         <source src="audio/shush2.mp3" type="audio/mp3"></source>
         <source src="audio/shush3.mp3" type="audio/mp3"></source>
