--- a/sound/index.html
+++ b/sound/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head> 
-        <title>Shhhh!</title> 
+        <title>Shhh!</title> 
         <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
