--- a/sound/index.html
+++ b/sound/index.html
@@ -12,8 +12,6 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <div id="canvases"></div>
-        
         <source src="audio/shush1.mp3" type="audio/mp3"></source>
         <source src="audio/shush2.mp3" type="audio/mp3"></source>
         <source src="audio/shush3.mp3" type="audio/mp3"></source>
@@ -21,9 +19,6 @@
 
         <script src="p5.min.js" type="text/javascript"></script>
         <script src="p5.sound.js" type="text/javascript"></script>
-        <script src="canvas.js" type="text/javascript"></script>
-        <script src="shusher.js" type="text/javascript"></script>
-        <script src="soundmeter.js" type="text/javascript"></script>
-        <script src="sound.js" type="text/javascript"></script>
+        <script src="sketch.js" type="text/javascript"></script>
     </body>
 <html>
