--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="links" class="center" style="font-family: Helvetica, Verdana, Arial;">
       <p class="big"><a href="/academy">Arongil Academy</a></p>
       <p class="big"><a href="/schedule">Schedule</a></p>
+      <p class="big"><a href="/sound">Shhh!</a></p>
       <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
       <p class="small"><a href="/disease">Disease Simulation</a></p>
       <p class="small"><a href="/calculator">Calculator</a></p>
