--- a/sound/index.html
+++ b/sound/index.html
@@ -16,6 +16,9 @@
         <source src="audio/shush2.mp3" type="audio/mp3"></source>
         <source src="audio/shush3.mp3" type="audio/mp3"></source>
         <source src="audio/shush4.mp3" type="audio/mp3"></source>
+        <source src="audio/classtime.mp3" type="audio/mp3"></source>
+        <source src="audio/bell.mp3" type="audio/mp3"></source>
+        <source src="audio/megan_warning.mp3" type="audio/mp3"></source>
 
         <script src="p5.min.js" type="text/javascript"></script>
         <script src="p5.sound.js" type="text/javascript"></script>
