--- a/index.html
+++ b/index.html
@@ -12,18 +12,29 @@
     <link href="base-styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="links" class="center" style="font-family: Helvetica, Verdana, Arial;">
-      <p class="big"><a href="/academy">Arongil Academy</a></p>
-      <p class="big"><a href="/schedule">Schedule</a></p>
-      <p class="big"><a href="/sound">Shhh!</a></p>
-      <p class="medium"><a href="/programs-collection">Programs Collection</a></p>
-      <p class="small"><a href="/disease">Disease Simulation</a></p>
-      <p class="small"><a href="/calculator">Calculator</a></p>
-      <p class="small"><a href="/gravity-pong">Gravity Pong</a></p>
-      <p class="small"><a href="/minesweeper">Minesweeper</a></p>
-      <p class="small"><a href="/bird-breaker">Bird Breaker</a></p>
-      <p class="small"><a href="/void">Void</a></p>
-      <p class="small"><a href="/statistics">Statistics (Box and Whiskers)</a></p>
+    <ul id="nav">
+      <li id="logo" style="float: left;"><a href="#nav" style="padding: 0; font-size: 0;"><img src="/academy/Arongil Logo.png"></a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Games</a>
+        <div class="dropdown-content" id="games-dropdown"><a href="https://www.arongil.com/bird-breaker">Bird Breaker</a><a href="https://www.arongil.com/minesweeper">Minesweeper</a><a href="https://www.arongil.com/gravity-pong">Gravity Pong</a></div>
+      </li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Products</a>
+        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/academy">Academy</a><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/disease">Disease</a><a href="https://www.arongil.com/programs-collection">Programs</a></div>
+      </li>
+    </ul>
+
+    <div id="info" style="font-size: 3vh;">
+      <div id="about" class="block" style="background-color: #d8d8d8;">
+        <h2 style="text-align: center;" class="block-header">About</h2>
+        <p>Arongil.com is a free, online library of mathematics, games, and products.</p>
+      </div>
+      <div id="contact" class="block" style="background-color: #d8d8d8;">
+        <h2 style="text-align: center;" class="block-header">Contact</h2>
+        <p>You can contact us at <em>contact@arongil.com</em>.</p>
+      </div>
     </div>
   </body>
 </html>
