--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Products</a>
-        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/academy">Academy</a><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/disease">Disease</a><a href="https://www.arongil.com/programs-collection">Programs</a></div>
+        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/academy">Arongil Academy</a><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/disease">Disease Simulation</a><a href="https://www.arongil.com/programs-collection">Programs Collection</a></div>
       </li>
     </ul>
 
