--- a/sound/index.html
+++ b/sound/index.html
@@ -19,9 +19,11 @@
         <source src="audio/classtime.mp3" type="audio/mp3"></source>
         <source src="audio/bell.mp3" type="audio/mp3"></source>
         <source src="audio/megan_warning.mp3" type="audio/mp3"></source>
+        <source src="audio/gabrielle_warning.mp3" type="audio/mp3"></source>
 
         <script src="p5.min.js" type="text/javascript"></script>
         <script src="p5.sound.js" type="text/javascript"></script>
+        <script src="audio.js" type="text/javascript"></script>
         <script src="sketch.js" type="text/javascript"></script>
     </body>
 <html>
