--- a/academy/index.html
+++ b/academy/index.html
@@ -30,7 +30,7 @@
     <li><a href="#about">About</a></li>
     <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn">Subjects</a>
-      <div class="dropdown-content" id="subject-dropdown"><a href="#differential-equations">Differential Equations</a><a href="#calculus-practice">AP Calculus Practice</a><a href="#trigonometry">Trigonometry</a><a href="#fun">Fun</a><a href="#history">US History</a></div>
+      <div class="dropdown-content" id="subject-dropdown"><a href="#differential-equations">Differential Equations</a><a href="#calculus-practice">AP Calculus Practice</a><a href="#trigonometry">Trigonometry</a><a href="#fun">Fun</a><a href="#history">US History</a><a href="#tools">Tools</a></div>
     </li>
   </ul>
 
